# PungsisZero

./: CMakeLists.txt
misc/: bitboard_generator.html
src/: CMakeLists.txt  action.h  actionprovider.cpp  actionprovider.h  basics.cpp  basics.h  batchedselfplay.cpp  batchedselfplay.h  bitboard.cpp  bitboard.h  board.cpp  board.h  game.h  intrinsics.h  kifu.h  mcts.h  orthodoxdelegate.cpp  pungsiszero.h  train.h  zobrist.cpp  zobrist.h
src/engine/: mctsactionprovider.cpp  mctsactionprovider.h
src/search/: dfpn.cpp  dfpn.h  mcts.cpp  mcts.h  mctsmodel.cpp  mctsmodel.h  tdfpn.cpp  tdfpn.h
test/: CMakeLists.txt  random_bot.cpp
train/: CMakeLists.txt  master.cpp  slave.cpp
